Trying to fix the spill over on the homepage for Firefox

--- a/core/static/core/css/base.css
+++ b/core/static/core/css/base.css
@@ -32,3 +32,7 @@ td.homepage-system {
     font-weight: bold;
     text-align: left;
 }
+.homepage-list {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
